--- a/index.ipynb
+++ b/index.ipynb
@@ -27,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from io import BytesIO\n",
     "from helper import double_sha256, little_endian_to_int\n",
@@ -38,13 +46,20 @@
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
     "# bytes.fromhex to get the binary block\n",
+    "bin_block = bytes.fromhex(hex_block)\n",
     "# make a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
+    "b = Block.parse(stream)\n",
     "\n",
     "# double_sha256 the serialization\n",
+    "sha = double_sha256(b.serialize())\n",
     "# interpret the result as a number in little endian\n",
+    "proof = little_endian_to_int(sha)\n",
     "# get the target\n",
-    "# check proof of work < target"
+    "target = b.target()\n",
+    "# check proof of work < target\n",
+    "print(proof < target)"
    ]
   },
   {
@@ -69,9 +84,11 @@
     "    def check_pow(self):\n",
     "        '''Returns whether this block satisfies proof of work'''\n",
     "        # get the double_sha256 of the serialization of this block\n",
+    "        sha = double_sha256(self.serialize())\n",
     "        # interpret this hash as a little-endian number\n",
+    "        proof = little_endian_to_int(sha)\n",
     "        # return whether this integer is less than the target\n",
-    "        pass"
+    "        return proof < self.target()"
    ]
   }
  ],
